@@ -1,4 +1,4 @@
 DIST screenkast-0.1.4.tar.gz 964641 RMD160 48ef67835b94d45a5c286df7a43ee7d6bb589373 SHA1 347c0a209ee9cb143078ea57dd29df84656b2eff SHA256 714c91f49b67a250152afb2f4bb4630366dd2732b455fb399eabb49e5888c887
-EBUILD screenkast-0.1.4.ebuild 650 RMD160 8f407be7b023a25d3ae8c111ccb22c990dbccd5c SHA1 c89d43a74a0be262addd76191f238917628ce3ba SHA256 811fec5b66cc7c2e8cf5bc264966debddca9a3a6a46cedd0d277814af6505589
-MISC ChangeLog 719 RMD160 19dc92060ad9d225be35ba85470813ba7ab5e6ac SHA1 44d809052bc012c345ab194e9a8e019fba1e7eca SHA256 8f58c0bd6b3c8e55bbfb3ca36e58ff3b8b835de88b6fbef43a9a56471c19af17
+EBUILD screenkast-0.1.4.ebuild 861 RMD160 97342d671d8c987fabe1df7ac5921e61e5a39143 SHA1 919594705d7bfe4f5cbed7ecf9b8b2ffbdeb1982 SHA256 899e2565e8aea050d366a2dc9857d6ac035e3808b55083a1e403662e1cb0cdfb
+MISC ChangeLog 862 RMD160 06922c6af41ce0e63657e5bb4f490f2366224263 SHA1 2ae23664ccd69128a6200347037ccea15095a46b SHA256 5594d17f99cfe23f829630f401c5f1f557ed81fe7364fe9cc4ad977076b5e8c6
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
