@@ -12,7 +12,7 @@ SRC_URI="mirror://sourceforge/${PN}/${P}.tar.gz"
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86"
-IUSE="doc"
+IUSE=""
 
 DEPEND=">=media-libs/libinstrudeo-${PV}
 	x11-libs/libXt
@@ -23,7 +23,19 @@ DEPEND=">=media-libs/libinstrudeo-${PV}
 	dev-cpp/glibmm
 	>=dev-cpp/libxmlpp-2.6"
 RDEPEND="${DEPEND}
-	|| ( net-misc/tightvnc net-misc/vnc )
-	doc? ( kde-base/khelpcenter )"
+	|| ( net-misc/tightvnc net-misc/vnc )"
 
 need-kde 3.5
+
+src_unpack() {
+	kde_src_unpack
+	sed -i -e "s/Version 0./Version=/" \
+		-e "s/Qt;KDE;Video;;/Qt;KDE;Video;/" \
+		-e "13d" \
+		data/${PN}.desktop || die "sed failed"
+}
+
+src_install() {
+	kde_src_install
+	dodoc AUTHORS ChangeLog NEWS README TODO
+}
