@@ -3,6 +3,10 @@
 # $Header: $
 
   12 Apr 2008; Charles Clément <caratorn@gmail.com>
+  screenkast-0.1.4.ebuild:
+  Use kde eclass functions, remove doc USE, fix desktop entry
+
+  12 Apr 2008; Charles Clément <caratorn@gmail.com>
   -screenkast-0.1.3.ebuild, +screenkast-0.1.4.ebuild:
   Version bump, add doc USE flag, vncserver dependency
 
